# PZ

./: .gitignore  AUDIT_COMPLETE.txt  DECOMPILE_ROSETTA_INTEGRATION.md  ENHANCEMENTS_COMPLETE.md  ENHANCEMENTS_STATUS.md  GLM_QUICKREF.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY_JAN17.md  README.md  REFINEMENT_COMPLETE.txt  ROSETTA_INTEGRATION_SUMMARY.md  SESSION_SUMMARY_JAN17.md  SMART_POINTER_REFACTORING.md  STATUS_JAN17.txt  class_map.json  java_converter.py  test_decompile.py
.venv-1/: pyvenv.cfg
Converted/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONVERSION_SUMMARY.md  DEPENDENCY_MAP.md  INTEGRATION_SUMMARY.md  LIBRARY_CONVERSION.md  README.md  RENDERING_SYSTEMS.md  SPRITE_SYSTEM.md  SWITCH_BUILD.md  build-switch.sh  build.sh  test_sprite.cpp
Converted/include/: Collision.h  Entity.h  GameTime.h  GameWindow.h  InputManager.h  Sprite.h  SpriteBatch.h  TextureManager.h  TileMap.h
Converted/src/: Entity.cpp  GameTime.cpp  GameWindow.cpp  InputManager.cpp  SoundManager.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteBatch.cpp  main.cpp
PZ-Switch/: ATLAS_QUICKREF.md  AUDIO_INTEGRATION_COMPLETE.md  CHUNK_RENDERING_GUIDE.md  CHUNK_RENDERING_IMPLEMENTATION.md  CHUNK_SYSTEM.md  CMakeLists.txt  COMPLETE_SESSION_SUMMARY.md  ENHANCEMENTS_SUMMARY.md  ENHANCEMENT_IMPLEMENTATION_GUIDE.md  INTEGRATION_COMPLETE.md  INVENTORY_QUICKREF.md  OPTIMIZATION_QUICKREF.md  PHASE5_SUMMARY.md  PROGRESS.md  SESSION_SUMMARY.md  SESSION_SUMMARY_JAN17_ATLAS.md  SESSION_SUMMARY_JAN18.md  SPRITE_INTEGRATION_GUIDE.md  TEXTURE_LOADING_GUIDE.md  TEXTURE_LOADING_QUICKREF.md  VISIBILITY_INTEGRATION_COMPLETE.md  WORLD_SYSTEM_BUILD_GUIDE.md  test_atlas.cpp  test_pooling.cpp  test_streaming.cpp  test_texture_loading.cpp
PZ-Switch/Docs/: ADVANCED_OPTIMIZATIONS_GUIDE.md  ANIMATION_QUICKREF.md  ATLAS_IMPLEMENTATION_SUMMARY.md  ATLAS_OVERVIEW.md  ATLAS_USAGE_EXAMPLE.md  AUDIO_INTEGRATION_TEST.md  AUDIO_QUICKREF.md  AUDIO_SYSTEM_GUIDE.md  CHUNK_SYSTEM_TESTS.md  COMPREHENSIVE_AUDIT_REPORT.md  CPP_INTEGRATION_GUIDE.md  DAY4_5_PERFORMANCE_REPORT.md  FIXES_COMPLETION_REPORT.md  FIXES_QUICK_SUMMARY.md  FIXES_STRATEGY.md  FMOD_INTEGRATION_STATUS.md  INTEGRATION_BEST_PRACTICES.md  INTEGRATION_GUIDE.md  MEDIUM_TERM_OPTIMIZATIONS.md  OPTIMIZATION_EXAMPLES.md  OPTIMIZATION_ROADMAP.md  OPTIMIZATION_SYSTEMS.md  PATHFINDING_AUTO_DETECTION.md  PHASE2_COMPLETION_REPORT.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_TESTING_PLAN_DAYS9-10.md  PHASE3_STUB_IMPLEMENTATION_REPORT.md  PHASE4C_TOOLING_SUMMARY.md  PHASE4_COMPLETE_REPORT.md  PHASE4_JAVA_STUBS_REPORT.md  PHASE4_TOOLING_IMPROVEMENTS.md  PHASE4_VISUAL_SUMMARY.md  PHASE5_PROGRESS_REPORT.md  PROGRESS.md  PROJECT_STATUS_COMPLETE.md  REFINEMENT_SUMMARY.md  SYSTEMS_IMPLEMENTATION_GUIDE.md  TEXTURE_ANIMATION_GUIDE.md  VISIBILITY_QUICKREF.md  WORLD_SYSTEM.md
PZ-Switch/build-switch/: CMakeCache.txt  Makefile  ProjectZomboidCpp.nacp  cmake_install.cmake
PZ-Switch/build-test/: CMakeCache.txt  Makefile  README.txt  cmake_install.cmake
PZ-Switch/config/: switch_config.cfg
PZ-Switch/include/: AIBehaviors.h  Animation.h  AnimationController.h  AssetStreaming.h  Audio.h  AudioBatching.h  AudioInteractionSystem.h  BitmapFont.h  Building.h  ChunkManager.h  ChunkRenderer.h  Collision.h  Config.h  ControllerRebindUI.h  Core.h  Entity.h  EntityPooling.h  GameState.h  GameStateMachine.h  GameTime.h  GameWindow.h  HotPathProfiler.h  InputManager.h  Inventory.h  InventoryManager.h  IsoCell.h  IsoChunk.h  IsoGridSquare.h  IsoObject.h  IsoPlayer.h  IsoZombie.h  IsometricRenderer.h  JNIBridge.h  JavaCompatMacros.h  LRUCache.h  LockFreeStructures.h  MainMenuScreen.h  MemoryPool.h  MultithreadingFramework.h  NetworkManager.h  (+26 more)
PZ-Switch/include_backup/: AIBehaviors.h  Audio.h  ChunkManager.h  Config.h  GameState.h  GameWindow.h  InputManager.h  Inventory.h  InventoryManager.h  IsoCell.h  MainMenuScreen.h  ObjectPool.h  Pathfinding.h  Player.h  PlayerChunkSync.h  SaveLoad.h  SoundManager.h  Sprite.h  SpriteLoader.h  Tasks.h  Terrain.h  UI.h  VisibilitySystem.h  WorldCollisionSystem.h  WorldContent.h
PZ-Switch/media/: media
PZ-Switch/src/: AIBehaviors.cpp  Animation.cpp  AnimationController.cpp  AssetStreaming.cpp  Audio.cpp  AudioInteractionSystem.cpp  BitmapFont.cpp  Building.cpp  ChunkManager.cpp  ChunkRenderer.cpp  Collision.cpp  Config.cpp  ControllerRebindUI.cpp  Core.cpp  Entity.cpp  GameStateMachine.cpp  GameTime.cpp  GameWindow.cpp  InputManager.cpp  Inventory.cpp  InventoryManager.cpp  IsoCell.cpp  IsoChunk.cpp  IsoGridSquare.cpp  IsoObject.cpp  IsoPlayer.cpp  IsoZombie.cpp  IsometricRenderer.cpp  JNIBridge.cpp  MainMenuScreen.cpp  MemoryPool.cpp  NetworkManager.cpp  NetworkingEnhanced.cpp  ObjectPool.cpp  OptionsScreen.cpp  Pathfinding.cpp  PathfindingThreadPool.cpp  Player.cpp  PlayerChunkSync.cpp  RadialMenu.cpp  (+17 more)
PZ-Switch/src_backup/: AIBehaviors.cpp  Animation.cpp  AssetStreaming.cpp  Audio.cpp  Building.cpp  Config.cpp  ControllerRebindUI.cpp  Core.cpp  GameStateMachine.cpp  GameWindow.cpp  InputManager.cpp  InventoryManager.cpp  IsoGridSquare.cpp  IsoObject.cpp  IsoPlayer.cpp  MainMenuScreen.cpp  ObjectPool.cpp  Pathfinding.cpp  PathfindingThreadPool.cpp  PlayerChunkSync.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteLoader.cpp  TextureAtlas.cpp  TextureManager.cpp  TileMap.cpp  UI.cpp  WorldCollisionSystem.cpp  WorldContent.cpp  WorldLoader.cpp  main.cpp
PZ-Switch/tools/: add_mutex_declarations.py  comprehensive_performance_test.cpp  fix_java_constructs.py  fix_java_keywords.py  fix_move_semantics.py  fix_null_tokens.py  lockfree_integration_test.cpp  multithreading_integration_test.cpp  performance_test_framework.py  simd_integration_test.cpp
ProjectZomboidSwitch/: CMakeCache.txt  CMakeLists.txt  CMakeLists_full.txt  CMakeLists_minimal.txt  README.md  build-switch.ps1  build-switch.sh  build.sh  cmake_install.cmake  icon_needed.txt
ProjectZomboidSwitch/abseil/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
ProjectZomboidSwitch/src/: main.cpp  (+2 more)
converted2/: CMakeLists.txt  CONVERSION_PLAN.md  CONVERSION_REPORT.md  java_to_cpp_converter.py
(+42108 files in other folders)
